@@ -18,7 +18,7 @@ my $ohloh = WWW::Ohloh::API->new( debug => 1, api_key => $ENV{OHLOH_KEY} );
 
 diag "using project $p_id";
 
-my @enlistments = $ohloh->get_enlistments( project_id => $p_id )
+my @enlistments = $ohloh->get_enlistments( project_id => $p_id )->all
   or diag "no enlistments found";
 
 validate_enlistment($_) for @enlistments;
